--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-4 container">
                 <img src="assets/imgs/valCotton.JPG" alt="Avatar" class="image">
                 <div class="middle">
-                    <div class="text">Your so beatiful!</div>
+                    <div class="text">You're so beatiful!</div>
                 </div>
             </div>
         </div>
@@ -126,21 +126,54 @@
             <div class="col-4 container">
                 <img src="assets/imgs/valMePerch.JPG" alt="Avatar" class="image">
                 <div class="middle">
-                    <div class="text">Such a great kitty momma!</div>
+                    <div class="text">Psyched on the summit!</div>
                 </div>
             </div>
             <div class="col-4 container">
-                <img src="assets/imgs/valBasking.JPG" alt="Avatar" class="image">
+                <img src="assets/imgs/crackClimbing.JPG" alt="Avatar" class="image">
                 <div class="middle">
-                    <div class="text">So happy to be down from the perch!!</div>
+                    <div class="text">Little cottonwood was so dope!</div>
                 </div>
             </div>
             <div class="col-4 container">
-                <img src="assets/imgs/valDrive.JPG" alt="Avatar" class="image">
+                <img src="assets/imgs/valEatingO's.JPG" alt="Avatar" class="image">
                 <div class="middle">
-                    <div class="text">You're a pretty good driver ;)</div>
+                    <div class="text">Little snack queen</div>
                 </div>
             </div>
+        </div>
+
+        <!-- Sixth row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/valWaterfall.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">You crazy.. and I love it!
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/beforeCastle.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Happiness before the heinous offwidth...</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/bridgeCrossing.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Can't wait for more adventures!</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid main-header">
+        <div class="row">
+
+            <div class="col-12">
+                    <p style="font-family: 'Major Mono Display', monospace;"></p>
+            </div>
+            
         </div>
     </div>
 </body>
