--- a/index.html
+++ b/index.html
@@ -1,16 +1,229 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
+
     <script src="main.js"></script>
 </head>
+
 <body>
-    <h2>
-        Hello
-    </h2>
+    <div class="container-fluid main-header">
+        <div class="row">
+            <div class="col-12">
+                <h1 style="font-family: 'Major Mono Display', monospace;">I Love You!</h1>
+                <p style="font-family: 'Major Mono Display', monospace;">Valerie you mean the world to me and I just
+                    want you to know that I miss you so much and cant't wait to be together
+                    again for good! I hope you enjoy some of the photos I've put together from the last few years. I'm
+                    so excited to
+                    continue making amazing memories with you!
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <!--first row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/eatingPeachO's.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">First Climbing Trip! Ft. Peach-O's</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/groupPerch.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Elephants Perch with none other than Mr. Ducker!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valCotton.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">You're so beatiful!</div>
+                </div>
+            </div>
+        </div>
+
+        <!--second row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/belaygle.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Checking out that cute butt!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valDog.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Such fluff, much dog</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valLake.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Simple times...</div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <!--Third row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/nutHelp.PNG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">This one always makes me laugh!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valScramble.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Dang gurl you scramble well, wanna make out?</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valWorkedOut.PNG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Your my favorite dingus</div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Fourth row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/valnNut.PNG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Such a great kitty momma!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valBasking.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">So happy to be down from the perch!!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valDrive.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">You're a pretty good driver ;)</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Fifth row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/valMePerch.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Psyched on the summit!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/crackClimbing.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Little cottonwood was so dope!</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/valEatingO's.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Little snack queen</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Sixth row -->
+        <div class="row">
+            <div class="col-4 container">
+                <img src="assets/imgs/valWaterfall.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">You crazy.. and I love it!
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/beforeCastle.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Happiness before the heinous offwidth...</div>
+                </div>
+            </div>
+            <div class="col-4 container">
+                <img src="assets/imgs/bridgeCrossing.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">Can't wait for more adventures!</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid main-header">
+        <div class="row">
+
+            <div class="col-12">
+                <p style="font-family: 'Major Mono Display', monospace;">I hope looking through these photos brought
+                    that
+                    sweet little smile to your face! I know this isn't much and definitley not all the photos
+                    we have together let alone the best ones, but I think they really showcase how amazing our
+                    relationship is.
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container-fluid">
+
+        <div class="row last-container-bg">
+            <div class="col-6 container">
+                <img src="assets/imgs/valDancingOnNug.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">One of my favorites. So stoked and so happy.</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container-fluid main-header"></div>
+
+    <div class="container-fluid">
+
+        <div class="row last-container-bg">
+            <div class="col-12 container">
+                <img src="assets/imgs/classic.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">So Classic....</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid main-header"></div>
+
+    <div class="container-fluid">
+
+            <div class="row last-container-bg">
+                <div class="col-8 container">
+                    <img src="assets/imgs/basePerch.JPG" alt="Avatar" class="image">
+                    <div class="middle">
+                        <div class="text">Trips off to a great start!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid main-header"></div>
 </body>
+
 </html>
