--- a/index.html
+++ b/index.html
@@ -171,11 +171,59 @@
         <div class="row">
 
             <div class="col-12">
-                    <p style="font-family: 'Major Mono Display', monospace;"></p>
+                <p style="font-family: 'Major Mono Display', monospace;">I hope looking through these photos brought
+                    that
+                    sweet little smile to your face! I know this isn't much and definitley not all the photos
+                    we have together let alone the best ones, but I think they really showcase how amazing our
+                    relationship is.
+                </p>
             </div>
-            
+
         </div>
     </div>
+
+    <div class="container-fluid">
+
+        <div class="row last-container-bg">
+            <div class="col-6 container">
+                <img src="assets/imgs/valDancingOnNug.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">One of my favorites. So stoked and so happy.</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="container-fluid main-header"></div>
+
+    <div class="container-fluid">
+
+        <div class="row last-container-bg">
+            <div class="col-12 container">
+                <img src="assets/imgs/classic.JPG" alt="Avatar" class="image">
+                <div class="middle">
+                    <div class="text">So Classic....</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid main-header"></div>
+
+    <div class="container-fluid">
+
+            <div class="row last-container-bg">
+                <div class="col-8 container">
+                    <img src="assets/imgs/basePerch.JPG" alt="Avatar" class="image">
+                    <div class="middle">
+                        <div class="text">Trips off to a great start!</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid main-header"></div>
 </body>
 
 </html>
